2005-10-19 Kimmo
 PATCH: [ 1329951 ] Readme.txt points to version 2.2 manual
  Docs/Users: ReadMe.txt
  Docs/Users/Languages: ReadMe-Catalan.txt ReadMe-Swedish.txt

2005-10-18 Tim
 PATCH: [ 1330059 ] Translated 3 missing sentences to German
  Src/Languages/German: MergeGerman.rc

2005-10-15 Perry
 PATCH: [ 1326813 ] Fix binary detection to allow archives
  Src: DirView.cpp

2005-10-13 Kimmo
 PATCH: [ 1305541 ] Rational ClearCase support
  Submitted by Greg (rys1908)
  Src: CCPrompt.cpp CCprompt.h DirActions.cpp MainFrm.cpp MainFrm.h Merge.rc resource.h
  Src/Common: coretools.cpp
  Src/Languages: *.rc resource.h

2005-10-12 Kimmo
 PATCH: [ 1323107 ] Patch for crash on save filenames with different cases
  From anonymous submitter
  Src: DirDcoc.cpp
 PATCH: [ 1286629 ] print support
  Submitted by Markus Rollmann
  Src: MainFrm.cpp Merge.rc MergeEditView.cpp MergeEditView.h
  Src/Common: SplitterWndEx.cpp SplitterWndEx.h
  Src/editlib: ccrystaleditview.cpp
  Src/Languages: *.rc
 Add Markus Rollmann to Contributors.txt
  Docs/Users/Contributors.txt

2005-10-05 Perry
 PATCH: [ 1242008 ] Update status to binary if open fails because binary
  Follow on for 2nd case
 Src: DirView.cpp MergeDoc.cpp

2005-10-03 Perry
 PATCH: [ 1302710 ] generating a report is slow
  Perry added comments explaining one code line
  Src: DirCmpReport.cpp

2005-10-03 Kimmo
 PATCH: [ 1302710 ] generating a report is slow
  Submitted by Takashi Sawanaka
  Src: DirCmpReport.cpp
 PATCH: [ 1310214 ] Shell extension italian translation
  Submitted by Andrea Decorte
  ShellExtension/Languages: ShellExtensionItalian.rc

2005-10-02 Perry
 PATCH: [ 1253949 ] cosmetic comment fix
  Src: DiffItem.h
 PATCH: [ 1253950 ] cosmetic--remove old code in InitInstance
  Src: Merge.cpp
 PATCH: [ 1253951 ] trivial cosmetic comment upgrade in arg parsing
  Src: Merge.cpp

2005-10-02 Jochen
 Merge7z DllBuild 0015
  Merge7z: Merge7zCommon.cpp Merge7zCommon.h revision.txt