@@ -2,6 +2,8 @@
  PATCH: [ 1329951 ] Readme.txt points to version 2.2 manual
   Docs/Users: ReadMe.txt
   Docs/Users/Languages: ReadMe-Catalan.txt ReadMe-Swedish.txt
+ BUG: [ 1326621 ] Extention ".WinMerge" is omitted
+  Src: OpenDlg.cpp
 
 2005-10-18 Tim
  PATCH: [ 1330059 ] Translated 3 missing sentences to German
